--- a/main/aula_arq.html
+++ b/main/aula_arq.html
@@ -124,7 +124,7 @@
 		<div class="container">
 			<div class="col-md-8 col-md-offset-2 text-center wrap_title">
 				<h2>Arquivos</h2>
-				<p class="lead" style="margin-top:0">O objetivo dessa unidade é apresentar o conteúdo relacionado a ponteiros. Será feita
+				<p class="lead" style="margin-top:0">O objetivo dessa unidade é apresentar o conteúdo relacionado a arquivos. Será feita
 				uma abordagem focando na linguagem C.</p>
 			</div>
 			<div class="col-md-10 col-md-offset-1  wrap_title">
@@ -135,6 +135,7 @@
 					<p align="justify">Então para trabalharmos com o armazenamento permanente utilizaremos a partir desse momento arquivos, nos quais os dados que forem utilizados nos programas poderão ficar armazenados para posteriormente serem utilizados.</p>
 					<p align="justify">A linguagem C trata os arquivos como uma sequência de bytes. Esta sequência pode ser manipulada de várias formas e para tanto, existem funções em C para criar, ler e escrever o conteúdo de arquivos independentemente de quais sejam os dados armazenados.</p>
 					<p align="justify">Em C podemos utilizar dois tipos de arquivos: arquivo binário e arquivo de texto.  Porém nosso foco será tratar de arquivos em texto, como os de extensão .txt, que nada mais serão do que uma lista de caracteres (dígitos, letras e símbolos, como espaço e acentuação).</p>
+				</div>
 				<div class="row">
 					<h3>Ponteiro para arquivo</h3>
 					<p align="justify">Em C, o arquivo é manipulado através de um ponteiro especial para o arquivo.</p>
@@ -259,7 +260,7 @@
 					<a href="exercicios/lista10.pdf">
 					  <img class="rotate" src="img/icon/pdf.png" alt="Generic placeholder image">
 					  <h3>Download</h3>
-					  <center><p text-align: center>Dowload lista de exercícios para treinamento de Ponteiros</p></center>
+					  <center><p text-align: center>Dowload lista de exercícios para treinamento de Arquivos</p></center>
 					</a>
 				  <!-- <p><a class="btn btn-embossed btn-primary view" role="button">View Details</a></p> -->
 				</div><!-- /.col-lg-4 -->
