--- a/main/aula_list.html
+++ b/main/aula_list.html
@@ -239,6 +239,15 @@
 					<p>O resultado final após essa operação seria esse:</p>
 					<div class="row"><center><img class="img-responsive " src="img/list/inicio_lista.PNG" alt="" align="middle"><center></div>
 				</div>
+			<center>
+				<h3>Video Explicativo - Listas Simplesmente Encadeadas</h3>
+					<p>                                      </p>
+					<video width=80% height="315" class="img-responsive" controls>
+					  <source src="video/listas_se.mp4" type="video/mp4">
+					  <source src="movie.ogg" type="video/ogg">
+					  Your browser does not support the video tag.
+					</video>
+				</center>
 			<div class="row">
 					<h3>Listas Duplamente Encadeadas</h3>
 						<p align="justify">Assim como as listas simplesmente encadeadas, uma lista duplamente encadeada é uma estrutura de dados que representa um conjunto de dados organizados em ordem linear e dinâmica. Ela também é composta por células ou nós (nomenclatura adotada), no entanto, a conexão entre seus os elementos é feita através de dois ponteiros (um que aponta para o elemento anterior, e o outro, para o seguinte).</p>
@@ -256,6 +265,7 @@
 						<p>Para completar é necessário a definição de  alguns pontos importantes:</p>
 						<div class="row"><center><img class="img-responsive " src="img/list/intro_deno.PNG" alt="" align="middle"><center></div>
 			</div>
+			
 			<div class="row">
 				<h3>Lista duplamente encadeada e não ordenada</h3>
 					<p align="justify">Como o próprio nome descreve é uma lista duplamente encadeada em que não há qualquer tipo de ordenação em relação aos nós pertencentes a lista.  A disposição dos mesmos dependerá da ordem e local (início ou fim da lista) em que forem inseridos.</p>
@@ -359,6 +369,15 @@
 					<p>O resultado final após essa operação seria esse:</p>
 					<div class="row"><center><img class="img-responsive " src="img/list/inicio_lista.PNG" alt="" align="middle"><center></div>
 				</div>
+				<center>
+				<h3>Video Explicativo - Listas Duplamente Encadeadas</h3>
+					<p>                                      </p>
+					<video width=80% height="315" class="img-responsive" controls>
+					  <source src="video/listas_de.mp4" type="video/mp4">
+					  <source src="movie.ogg" type="video/ogg">
+					  Your browser does not support the video tag.
+					</video>
+				</center>
 				<div class="row">
 					<h3>Listas Circulares</h3>
 						<p align="justify">As listas citadas anteriormente também podem ser implementadas de forma circular. Isso significa que, quando forem simplesmente encadeadas seu ponteiro próximo “*prox” do último elemento apontará para o primeiro elemento da lista. Já quando forem duplamente encadeadas terão além do ponteiro próximo “*prox” do último elemento apontando para o primeiro elemento da lista, o ponteiro anterior “*ant” do primeiro elemento apontará para o último elemento da lista.</p>
@@ -373,15 +392,6 @@
 							<div class="row"><center><img class="img-responsive " src="img/list/circular_deo.PNG" alt="" align="middle"><center></div>
 					     </ul>
 			</div>
-				<center>
-				<h3>Video Explicativo - Ponteiros 1</h3>
-					<p>                                      </p>
-					<video width=80% height="315" class="img-responsive" controls>
-					  <source src="video/ponteiros1.mp4" type="video/mp4">
-					  <source src="movie.ogg" type="video/ogg">
-					  Your browser does not support the video tag.
-					</video>
-				</center>
 				
 				
 			
@@ -406,7 +416,7 @@
 					<a href="exercicios/lista10.pdf">
 					  <img class="rotate" src="img/icon/pdf.png" alt="Generic placeholder image">
 					  <h3>Download</h3>
-					  <center><p text-align: center>Dowload lista de exercícios para treinamento de Ponteiros</p></center>
+					  <center><p text-align: center>Dowload lista de exercícios para treinamento de Listas</p></center>
 					</a>
 				  <!-- <p><a class="btn btn-embossed btn-primary view" role="button">View Details</a></p> -->
 				</div><!-- /.col-lg-4 -->
