--- a/main/aula_aloc.html
+++ b/main/aula_aloc.html
@@ -134,8 +134,8 @@
 					<p align="justify">Na alocação estática de memória, os tipos de dados têm tamanho predefinido. Neste caso, o compilador vai alocar de forma automática o espaço de memória necessário. Sendo assim, dizemos que a alocação estática é feita em tempo de compilação.</p>
 					<p align="justify">Problemas: </p>
 					<ul style="list-style-type:circle">
-						<li>•	Desperdiçar recursos: nem sempre é possível determinar previamente qual é o espaço necessário para armazenar as informações. Quando não se conhece o espaço total necessário, a tendência é o programador exagerar pois é melhor superdimensionar do que faltar espaço. Por exemplo alocar um vetor 100 caracteres para armazenar o nome de uma pessoa, porém no momento só foram utilizados 30.</li>
-						<li>•	Falta de recursos: caso você aloque um vetor de 10 caracteres e escrever 20 para armazenar o nome de uma pessoa, vai ver que isso é possível. Porém extremamente falho e perigoso, pois os caracteres sobressalentes irão ocupar outros endereços de memória que você não alocou, e nesses espaços de memória poderiam existir informações importantes de seu computador.</li>
+						<li><b>Desperdiçar recursos:</b> nem sempre é possível determinar previamente qual é o espaço necessário para armazenar as informações. Quando não se conhece o espaço total necessário, a tendência é o programador exagerar pois é melhor superdimensionar do que faltar espaço. Por exemplo alocar um vetor 100 caracteres para armazenar o nome de uma pessoa, porém no momento só foram utilizados 30.</li>
+						<li><b>Falta de recursos:</b> caso você aloque um vetor de 10 caracteres e escrever 20 para armazenar o nome de uma pessoa, vai ver que isso é possível. Porém extremamente falho e perigoso, pois os caracteres sobressalentes irão ocupar outros endereços de memória que você não alocou, e nesses espaços de memória poderiam existir informações importantes de seu computador.</li>
 					</ul>
 				</div>
 				<div class="row">
@@ -244,7 +244,7 @@
 			<div class="row">
 	
 				<div class="col-sm-4 col-sm-offset-4 wow fadeInDown text-center">
-					<a href="#">
+					<a href="exercicios/lista11.pdf">
 					  <img class="rotate" src="img/icon/pdf.png" alt="Generic placeholder image">
 					  <h3>Download</h3>
 					  <center><p text-align: center>Dowload lista de exercícios para treinamento de Ponteiros</p></center>
