--- a/main/index.html
+++ b/main/index.html
@@ -263,6 +263,38 @@
 				</a	>
 				 <!-- <p><a class="btn btn-embossed btn-primary view" role="button">View Details</a></p> -->
 			 </div>
+			 <div class="col-sm-4 wow fadeInDown text-center">
+				<a href="aula_arq.html">
+				  <img  class="rotate" src="img/icon/arquivo.png" alt="Generic placeholder image">
+				   <h3>Arquivos</h3>
+				 <p class="lead">Utilize armazenamento persistente em seus programas. </p>
+				</a	>
+				 <!-- <p><a class="btn btn-embossed btn-primary view" role="button">View Details</a></p> -->
+			 </div>
+			 <div class="col-sm-4 wow fadeInDown text-center">
+				<a href="aula_list.html">
+				  <img  class="rotate" src="img/icon/list.png" alt="Generic placeholder image">
+				   <h3>Listas</h3>
+				 <p class="lead">Utilize armazenamento persistente em seus programas. </p>
+				</a	>
+				 <!-- <p><a class="btn btn-embossed btn-primary view" role="button">View Details</a></p> -->
+			 </div>
+			 <div class="col-sm-4 wow fadeInDown text-center">
+				<a href="aula_pilha_fila.html">
+				  <img  class="rotate" src="img/icon/pilha.png" alt="Generic placeholder image">
+				   <h3>Pilha e Fila</h3>
+				 <p class="lead">Utilize armazenamento persistente em seus programas. </p>
+				</a	>
+				 <!-- <p><a class="btn btn-embossed btn-primary view" role="button">View Details</a></p> -->
+			 </div>
+			 <div class="col-sm-4 wow fadeInDown text-center">
+				<a href="aula_arv.html">
+				  <img  class="rotate" src="img/icon/arv.png" alt="Generic placeholder image">
+				   <h3>Árvore Binária</h3>
+				 <p class="lead">Utilize armazenamento persistente em seus programas. </p>
+				</a	>
+				 <!-- <p><a class="btn btn-embossed btn-primary view" role="button">View Details</a></p> -->
+			 </div>
 			 
 		  </div>
 		   
