--- a/main/aula_list.html
+++ b/main/aula_list.html
@@ -124,7 +124,7 @@
 		<div class="container">
 			<div class="col-md-8 col-md-offset-2 text-center wrap_title">
 				<h2>Listas</h2>
-				<p class="lead" style="margin-top:0">O objetivo dessa unidade é apresentar o conteúdo relacionado a ponteiros. Será feita
+				<p class="lead" style="margin-top:0">O objetivo dessa unidade é apresentar o conteúdo relacionado a Listas. Será feita
 				uma abordagem focando na linguagem C.</p>
 			</div>
 			<div class="col-md-10 col-md-offset-1  wrap_title">
