--- a/main/aula_pilha_fila.html
+++ b/main/aula_pilha_fila.html
@@ -178,6 +178,15 @@
 					<p>O resultado final após essa operação seria esse:</p>
 					<div class="row"><center><img class="img-responsive " src="img/pilha_fila/inicio_pilha.PNG" alt="" align="middle"><center></div>
 				</div>
+				<center>
+				<h3>Video Explicativo - Pilhas</h3>
+					<p>                                      </p>
+					<video width=80% height="315" class="img-responsive" controls>
+					  <source src="video/ponteiros1.mp4" type="video/mp4">
+					  <source src="movie.ogg" type="video/ogg">
+					  Your browser does not support the video tag.
+					</video>
+				</center>
 				<div class="row">
 					<h3>Fila</h3>
 					<p>Fila é uma estrutura do tipo FIFO (First In First Out), ou seja, o primeiro elemento inserido será o primeiro a ser removido. Cada elemento da estrutura pode armazenar um ou vários dados e um ponteiro para o próximo elemento, o que permite o encadeamento e mantêm uma estrutura linear.</p>
@@ -225,7 +234,7 @@
 				
 				
 				<center>
-				<h3>Video Explicativo - Ponteiros 1</h3>
+				<h3>Video Explicativo - Fila</h3>
 					<p>                                      </p>
 					<video width=80% height="315" class="img-responsive" controls>
 					  <source src="video/ponteiros1.mp4" type="video/mp4">
